# lambda-tf

./: .coverage  .gitignore  Dockerfile  Dockerfile.lambda_func  Makefile  README.md  main.tf  outputs.tf  pyproject.toml  setup.cfg  variables.tf
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  unit_test.yml
infra/: api_gateway.tf  ecr.tf  lambda.tf  main.tf  variables.tf
lambda_tf/: lambda_func.py
modules/api_gateway/: main.tf  outputs.tf  variables.tf
modules/lambda/: main.tf  outputs.tf  variables.tf
src/: lambda_func.py
tests/: test_lambda_func.py
