[tool.poetry]
name = "lambda-tf"
version = "0.1.0"
description = "Lambda function"
authors = ["jmeisele <jmeisele@yahoo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.2"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
